# atsam4e

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  Readme.md  flash.tcl  update.sh
.cargo/: config
.vim/: coc-settings.json
boards/duet2_v1.03_wifi/: Cargo.toml  build.rs
boards/duet2_v1.03_wifi/examples/: blinky.rs  bootloader.rs  helloworld.rs  usb_dfu.rs  usb_poll.rs
boards/duet2_v1.03_wifi/src/: lib.rs
hal/: Cargo.toml
hal/src/: debug.rs  debug_on_buffer.rs  debug_on_uart.rs  delay.rs  gpio.rs  lib.rs  math.rs  pmc.rs  prelude.rs  serial.rs  time.rs  usb.rs
hal/src/serial/: config.rs
pac/atsam4e16c/: Cargo.toml
pac/atsam4e16c/src/: acc.rs  gmac.rs  lib.rs  pioa.rs  pioc.rs  pmc.rs  tc2.rs
pac/atsam4e16c/src/acc/: idr.rs  imr.rs  mr.rs
pac/atsam4e16c/src/aes/: ier.rs  keywr.rs
pac/atsam4e16c/src/afec0/: cgr.rs
pac/atsam4e16c/src/afec1/: acr.rs  cher.rs
pac/atsam4e16c/src/can0/: mam1.rs  mam3.rs  mcr3.rs  mdh1.rs  mdl2.rs  mfid6.rs  mmr4.rs  mr.rs  msr0.rs  msr4.rs  wpsr.rs
pac/atsam4e16c/src/can1/: mcr1.rs  mcr4.rs  mdh0.rs  mdh7.rs  mfid0.rs  mid7.rs  mmr0.rs  mmr2.rs  mmr3.rs
pac/atsam4e16c/src/chipid/: cidr.rs
pac/atsam4e16c/src/cmcc/: men.rs  msr.rs  type_.rs
pac/atsam4e16c/src/crccu/: dma_dis.rs  dma_ier.rs  mr.rs  sr.rs
pac/atsam4e16c/src/dacc/: idr.rs  imr.rs  mr.rs
pac/atsam4e16c/src/dmac/: cher.rs  creq.rs  ctrla3.rs  ctrlb0.rs  daddr0.rs  daddr1.rs  ebcidr.rs  ebcier.rs  en.rs  gcfg.rs
pac/atsam4e16c/src/efc/: fmr.rs
pac/atsam4e16c/src/gmac/: bfr64.rs  dtf.rs  efrs.rs  fr.rs  hrt.rs  isr.rs  man.rs  mcf.rs  mfr.rs  mft.rs  ncr.rs  ofr.rs  pefrs.rs  peftn.rs  pefts.rs  sab4.rs  tbfr1023.rs  tbfr1518.rs  ti.rs  tssn.rs
pac/atsam4e16c/src/hsmci/: blkr.rs  cstor.rs  imr.rs  mr.rs  (+4 more)
pac/atsam4e16e/: Cargo.toml
pac/atsam4e16e/src/: dmac.rs  lib.rs  matrix.rs  smc.rs  udp.rs
pac/atsam4e8c/: Cargo.toml
pac/atsam4e8c/src/: afec1.rs  can1.rs  crccu.rs  lib.rs  pwm.rs  spi.rs  twi0.rs  uart0.rs
pac/atsam4e8c/src/acc/: acr.rs  cr.rs  ier.rs  wpsr.rs
pac/atsam4e8c/src/aes/: cr.rs  idr.rs
pac/atsam4e8c/src/afec0/: cdr.rs  diffr.rs  imr.rs  mr.rs  seq1r.rs
pac/atsam4e8c/src/afec1/: chsr.rs  ptsr.rs  tempmr.rs
pac/atsam4e8c/src/can0/: mam7.rs  mcr2.rs  mcr6.rs  mdh4.rs  mdl0.rs  mdl5.rs  mdl6.rs  mfid3.rs  mfid4.rs  mid2.rs  mid5.rs  msr2.rs  msr3.rs  msr6.rs
pac/atsam4e8c/src/can1/: acr.rs  br.rs  mam0.rs  mam5.rs  mcr0.rs  mdh3.rs  mdh6.rs  msr1.rs  msr5.rs
pac/atsam4e8c/src/chipid/: cidr.rs
pac/atsam4e8c/src/cmcc/: ctrl.rs  maint0.rs  mcfg.rs  sr.rs
pac/atsam4e8c/src/crccu/: dma_en.rs  idr.rs
pac/atsam4e8c/src/dacc/: chdr.rs  ier.rs  wpmr.rs
pac/atsam4e8c/src/dmac/: cfg2.rs  cfg3.rs  ctrla2.rs  ctrlb2.rs  ctrlb3.rs  ebcimr.rs  saddr0.rs  saddr1.rs  wpmr.rs  wpsr.rs
pac/atsam4e8c/src/efc/: fcr.rs
pac/atsam4e8c/src/gmac/: bft64.rs  dcfgr.rs  efrn.rs  eftn.rs  gtbft1518.rs  ier.rs  jr.rs  rbqb.rs  rpq.rs  rse.rs  rsr.rs  sab1.rs  sab2.rs  sab3.rs  sat1.rs  sat3.rs  svlan.rs  tbfr511.rs  tbft1518.rs  tidm.rs  tsss.rs  tur.rs
pac/atsam4e8c/src/hsmci/: cfg.rs  cmdr.rs  ier.rs
pac/atsam4e8c/src/matrix/: pras10.rs  pras13.rs  prbs12.rs  prbs13.rs  wpmr.rs
pac/atsam4e8c/src/piob/: aimmr.rs  ifscer.rs  imr.rs  pdr.rs
pac/atsam4e8c/src/pioc/: frlhsr.rs  pcier.rs  pcimr.rs  pcisr.rs  schmitt.rs
pac/atsam4e8c/src/piod/: lsr.rs  pusr.rs
pac/atsam4e8c/src/pioe/: ier.rs  osr.rs  pcidr.rs  scdr.rs
pac/atsam4e8c/src/pmc/: pmc_fspr.rs  pmc_scer.rs
pac/atsam4e8c/src/pwm/: caeupd2.rs  caeupd3.rs  cdty1.rs  cmpm0.rs  cmpm3.rs  cmpmupd5.rs  cmpv1.rs  cmpv3.rs  cmpv4.rs  cmpvupd3.rs  cmr2.rs  cmupd0.rs  cprd0.rs  cprd3.rs  cprdupd0.rs  cprdupd2.rs  cprdupd3.rs  dtupd3.rs  ena.rs  fcr.rs  fpv1.rs  idr2.rs  ier2.rs  oov.rs  scm.rs  wpcr.rs
pac/atsam4e8c/src/rstc/: cr.rs  mr.rs
pac/atsam4e8c/src/spi/: csr.rs  ier.rs  mr.rs  tnpr.rs  wpmr.rs
pac/atsam4e8c/src/supc/: mr.rs  smmr.rs  wuir.rs
pac/atsam4e8c/src/tc0/: cmr2.rs  qisr.rs  ra1.rs  rncr1.rs  rncr2.rs  rpr1.rs
pac/atsam4e8c/src/tc1/: bcr.rs  ccr1.rs  cmr0_wave_eq_1.rs  cv2.rs  emr0.rs  ier1.rs  imr2.rs  rncr0.rs  rnpr1.rs  sr0.rs
pac/atsam4e8c/src/tc2/: rab2.rs
pac/atsam4e8c/src/twi1/: iadr.rs  thr.rs  tpr.rs  wprot_status.rs
pac/atsam4e8c/src/uart0/: ier.rs
pac/atsam4e8c/src/uart1/: brgr.rs
pac/atsam4e8c/src/udp/: csr.rs  fdr.rs  ier.rs  imr.rs  rst_ep.rs
pac/atsam4e8c/src/usart0/: ier.rs  imr.rs
pac/atsam4e8c/src/usart1/: imr_spi_mode.rs
pac/atsam4e8c/src/wdt/: sr.rs
pac/atsam4e8e/: Cargo.toml
pac/atsam4e8e/src/: aes.rs  cmcc.rs  dacc.rs  gpbr.rs  hsmci.rs  lib.rs  tc0.rs  usart1.rs
svd/devices/: atsam4e8e.xsl
usbd-dfu-demo/: Cargo.toml
usbd-dfu-demo/src/: lib.rs
usbd-dfu/src/: dfumode.rs  lib.rs  mode.rs  runtime.rs
(+487 files in other folders)
