[workspace]
members = ['boards/*']
exclude = ['hal', 'pac']

[patch.crates-io]
atsam4e-hal = { path = 'hal' }
#usb-device = { path  = 'usb-device' }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
panic = "abort"
opt-level = 's'
