[workspace]
members = ['boards/*', 'usbd-dfu', 'usbd-dfu-demo']
exclude = ['hal', 'pac']

[patch.crates-io]
atsam4e-hal = { path = 'hal' }
#usb-device = { path  = 'usb-device' }
usbd-dfu = { path = 'usbd-dfu' }
usbd-dfu-demo = { path = 'usbd-dfu-demo' }

[profile.release]
codegen-units = 1 # better optimizations
#debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
panic = "abort"
opt-level = 's'
