[package]
name = "duet2_v1_03_wifi"
description = "Demo code for the atsam4e hal crate on the Duet2wifi v1.03 board."
version = "0.1.0"
authors = ["Wilfried Chauveau <wilfried.chauveau@ithinuel.me>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atsam4-hal = "*"
cortex-m-rt = "*"
cortex-m = "*"
embedded-hal = "*"
panic-halt = "*"

[features]
default = ["atsam4-hal/sam4e8e", 'rt']
rt = []
