[package]
name = "duet2_v1_03_wifi"
description = "Demo code for the atsam4e hal crate on the Duet2wifi v1.03 board."
version = "0.1.0"
authors = ["Wilfried Chauveau <wilfried.chauveau@ithinuel.me>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bootloader = []
application = []
debug_on_uart0 = ["atsam4e-hal/debug_on_uart0"]
debug_on_buffer = ["atsam4e-hal/debug_on_buffer"]

[dependencies]
atsam4e-hal = { version = "*", features = ["sam4e8e"] }
pin-utils = "*"

[dev-dependencies]
cortex-m-rt = "*"
cortex-m = "*"
embedded-hal = "*"
panic-halt = "*"
usb-device = "*"
usbd-serial = {version = "*"}
usbd-dfu = {version = "*"}
alloc-cortex-m = "*"

[[example]]
name = "usb_dfu"
required-features = ["debug_on_buffer"]
