[package]
name = "atsam4e8c"
description = "Peripheral access API for ATSAM4E8C microcontrollers (generated using svd2rust)"
version = "0.1.0"
authors = ["Wilfried Chauveau <wilfried.chauveau@ithinuel.me>"]
keywords = ["no-std", "arm", "cortex-m"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
documentation = "https://atsamd-rs.github.io/atsamd/atsam4e8c/atsam4e8c/"

[dependencies]
bare-metal = "~0.2"
cortex-m = "~0.6"
vcell = "~0.1"

[dependencies.cortex-m-rt]
version = "~0.6.12"
optional = true

[features]
rt = ["cortex-m-rt/device"]
